- ADD: New bugtracking property "bugtraq:append". If set to
       "false", then the bug-ID is inserted at the top of
       the log message. If set to "true" or not set at all,
       then the bug-ID is appended to the log message
       like before. (Stefan)
- ADD: The "check for updates" dialog now shows the
       HEAD revision of the repository. (Stefan)
- CHG: improved dialog for creating repositories. (Stefan)
- CHG: The "paste log template in english" setting is now
       a project property (tsvn:logfilelistenglish). Set
       this property to "false" if you want that template
       pasted in your local language. (Stefan)
- CHG: When doing a dry-run merge, after the merge is done
       the merge dialog is shown again with the same settings
       as before so the real merge can be done right away. (Stefan)
- BUG: The log message history in the commit dialog could
       get emptied when no log message was entered. (Stefan)

Version 1.1.0
- ADD: Width marker for log messages. (Stefan)
- ADD: Log message templates. (Stefan)
- ADD: Possibility to delete mutliple selected files at
       once in the repository browser. (Stefan)
- ADD: new keywords $WCDATE$ and $WCMODS? for the
       SubWCRev-tool. (Simon Large)
- CHG: Better colorization in the blame viewer. (Simon Large)
- BUG: Some dialogs in the repobrowser had the accelerator
       ampersand char in their title. (Stefan)

Version 1.1.0 RC2
- ADD: "dry-run" option for the merge command. This solves
       issue 92. (Stefan)
- ADD: TortoiseBlame for viewing blames. Issue 95. (Stefan)
- ADD: Integration with bug/issuetrackers. (Stefan)
- ADD: The commit dialog got a log history combobox. (Stefan)
- ADD: Finish message when ignoring files. (Stefan)
- CHG: TortoiseMerge doesn't complain anymore when doing diffs
       of files which have/have not the keywords expanded. (Stefan)
- CHG: The repository browser closes the connection after each
       ls command to prevent too many svnserve processes on