@@ -140,6 +140,7 @@
 #define IDS_TT_BQWARNNOISSUE            227
 #define IDS_TT_TSVNLOGFILELISTENGLISH   228
 #define IDS_TT_BQAPPEND                 229
+#define IDS_ERR_PROPNOTONFILE           230
 #define IDC_REVISION                    1001
 #define IDC_LOCKED                      1002
 #define IDC_REPOURL                     1003
